test/invalid/baseline/setlike-2types.txt
Syntax error at line 2, since `interface SetLikeTwoTypes`:
  setlike<long, long>;
              ^ Unterminated setlike declaration
